--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,17 @@ services:
     command: npm run dev
     environment:
       - NODE_ENV=development
+      - HOST={$(ip route show | awk '/default/ {print $9}')}
     volumes:
       - .:/app
       - /app/node_modules
       - /app/.next
     ports:
       - "3000:3000"
+    networks:
+      - shared_network
 
 networks:
   shared_network:
-    external: true
+    name: shared_network
+    driver: bridge
