Added job volume CSS + Several global CSS improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       target: dev
     restart: always
     command: npm run dev
+    env_file:
+      - .env
     environment:
       - NODE_ENV=development
       - HOST={$(ip route show | awk '/default/ {print $9}')}
