--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "15.0.2",
     "postcss": "8",
     "tailwindcss": "3.4.14",
-    "typescript": "5"
+    "typescript": "5",
+    "react-emoji-render": "^2.0.1"
   }
 }
