--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "^15.1.6",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-timer-hook": "^3.0.8"
   },
   "devDependencies": {
     "@types/node": "20",
@@ -20,8 +21,8 @@
     "eslint": "8.57.1",
     "eslint-config-next": "15.0.2",
     "postcss": "8",
+    "react-emoji-render": "^2.0.1",
     "tailwindcss": "3.4.14",
-    "typescript": "5",
-    "react-emoji-render": "^2.0.1"
+    "typescript": "5"
   }
 }
