--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stackframe/stack": "^2.7.21",
+    "axios": "^1.8.1",
     "next": "^15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -18,6 +20,7 @@
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "^18",
+    "@types/set-cookie-parser": "^2.4.10",
     "eslint": "8.57.1",
     "eslint-config-next": "15.0.2",
     "postcss": "8",
