First production-ready commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       target: dev
     restart: always
-    command: npm run dev
+    command: npm run start
     env_file:
       - .env
     environment:
