--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@stackframe/stack": "^2.7.21",
     "axios": "^1.8.1",
+    "https": "^1.0.0",
     "next": "^15.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
