--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,13 @@
 version: "3.8"
 services:
-  frontend:
-    container_name: frontend
+  frontend-dev:
+    container_name: frontend-dev
     build:
       context: .
       target: dev
+      dockerfile: Dockerfile.dev
     restart: always
-    command: npm run start
+    command: npm run dev
     env_file:
       - .env
     environment:
@@ -17,7 +18,7 @@ services:
       - /app/node_modules
       - /app/.next
     ports:
-      - "3000:3000"
+      - "3001:3000"
       - "9229:9229"
       - "9230:9230"
     networks:
