--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@stackframe/stack": "^2.7.21",
     "axios": "^1.8.1",
     "https": "^1.0.0",
+    "imagesloaded": "^5.0.0",
     "next": "^15.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-timer-hook": "^3.0.8"
   },
   "devDependencies": {
+    "@types/imagesloaded": "^4.1.6",
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "^18",
