--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.2",
     "https": "^1.0.0",
     "imagesloaded": "^5.0.0",
+    "motion": "^12.6.0",
     "next": "15.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
