--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@stackframe/stack": "^2.7.30",
@@ -21,11 +22,13 @@
   },
   "devDependencies": {
     "@types/imagesloaded": "^4.1.6",
+    "@types/jest": "^29.5.14",
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "^18",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.0.2",
+    "jest": "^29.7.0",
     "react-emoji-render": "^2.0.1",
     "tailwindcss": "3.4.14",
     "typescript": "5"
