--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-timer-hook": "^3.0.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/imagesloaded": "^4.1.6",
     "@types/jest": "^29.5.14",
     "@types/node": "20",
@@ -29,6 +32,7 @@
     "eslint": "^9.23.0",
     "eslint-config-next": "15.0.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react-emoji-render": "^2.0.1",
     "tailwindcss": "3.4.14",
     "typescript": "5"
