--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --turbopack",
+    "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --turbopack -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,7 +15,7 @@
     "https": "^1.0.0",
     "imagesloaded": "^5.0.0",
     "motion": "^12.6.0",
-    "next": "15.2.3",
+    "next": "15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-timer-hook": "^3.0.8"
