--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "imagesloaded": "^5.0.0",
     "motion": "^12.6.0",
     "next": "15.2.4",
+    "pnpm": "^10.8.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-timer-hook": "^3.0.8"
