--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "docker-next",
-  "version": "0.1.0",
+  "name": "relaxg-remixed",
   "private": true,
+  "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --turbopack -p 3001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
+    "build": "remix vite:build",
+    "dev": "remix vite:dev --host",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@stackframe/stack": "^2.7.30",
-    "axios": "^1.8.2",
-    "https": "^1.0.0",
-    "imagesloaded": "^5.0.0",
-    "motion": "^12.6.0",
-    "next": "15.2.4",
-    "pnpm": "^10.8.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-timer-hook": "^3.0.8"
+    "@remix-run/node": "^2.16.5",
+    "@remix-run/react": "^2.16.5",
+    "@remix-run/serve": "^2.16.5",
+    "isbot": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/imagesloaded": "^4.1.6",
-    "@types/jest": "^29.5.14",
-    "@types/node": "20",
-    "@types/react": "18",
-    "@types/react-dom": "^18",
-    "eslint": "^9.23.0",
-    "eslint-config-next": "15.0.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "react-emoji-render": "^2.0.1",
-    "tailwindcss": "3.4.14",
-    "typescript": "5"
+    "@remix-run/dev": "^2.16.5",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.1.6",
+    "vite": "^6.0.0",
+    "vite-tsconfig-paths": "^4.2.1"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
