--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,11 +5,13 @@ FROM base AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
+RUN npm install --global corepack@latest
+RUN corepack use pnpm@10.14.0
 
-# Install dependencies based on the preferred package manager
-COPY package.json package-lock.json* ./
+# Install dependencies using pnpm
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 RUN \
-  if [ -f package-lock.json ]; then npm ci; \
+  if [ -f pnpm-lock.yaml ]; then pnpm install; \
   else echo "Lockfile not found." && exit 1; \
   fi
 
