--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "docker-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --turbopack -p 3001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@stackframe/stack": "^2.7.30",
-    "axios": "^1.8.2",
-    "https": "^1.0.0",
-    "imagesloaded": "^5.0.0",
-    "motion": "^12.6.0",
-    "next": "15.2.4",
-    "pnpm": "^10.8.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-timer-hook": "^3.0.8"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/imagesloaded": "^4.1.6",
-    "@types/jest": "^29.5.14",
-    "@types/node": "20",
-    "@types/react": "18",
-    "@types/react-dom": "^18",
-    "eslint": "^9.23.0",
-    "eslint-config-next": "15.0.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "react-emoji-render": "^2.0.1",
-    "tailwindcss": "3.4.14",
-    "typescript": "5"
-  }
+    "name": "docker-next",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --turbopack -p 3001",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@stackframe/stack": "^2.8.28",
+        "axios": "^1.11.0",
+        "https": "^1.0.0",
+        "imagesloaded": "^5.0.0",
+        "motion": "^12.23.12",
+        "next": "15.2.4",
+        "pnpm": "^10.14.0",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "react-timer-hook": "^3.0.8"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.6.4",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/imagesloaded": "^4.1.7",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^20.19.10",
+        "@types/react": "^18.3.23",
+        "@types/react-dom": "^18.3.7",
+        "eslint": "^9.33.0",
+        "eslint-config-next": "15.0.2",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "react-emoji-render": "^2.0.1",
+        "tailwindcss": "3.4.14",
+        "typescript": "^5.9.2"
+    },
+    "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
