--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,6 +3,9 @@ FROM node:18-alpine AS base
 RUN apk add --no-cache libc6-compat git
 RUN git clone https://github.com/kuroi-9/relaxg.git /app
 WORKDIR /app
+RUN npm install --global corepack@latest
+RUN corepack use pnpm@10.14.0
+
 RUN \
   if [ -f pnpm-lock.yaml ]; then pnpm install; \
   else echo "Lockfile not found." && exit 1; \
