Differentiation of dev and prod .next directory

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,7 +15,7 @@ services:
         volumes:
             - .:/app
             - /app/node_modules
-            - /app/.next
+            - .dev_next:/app/.next
         ports:
             - "3001:3001"
             - "9229:9229"
