--- a/package.json
+++ b/package.json
@@ -7,34 +7,39 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "stylelint": "stylelint '**/*.css'",
+        "stylelint:fix": "stylelint '**/*.css' --fix",
         "test": "jest"
     },
     "dependencies": {
         "@stackframe/stack": "^2.8.28",
-        "axios": "^1.11.0",
-        "https": "^1.0.0",
-        "imagesloaded": "^5.0.0",
-        "motion": "^12.23.12",
         "next": "15.2.4",
-        "pnpm": "^10.14.0",
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-timer-hook": "^3.0.8"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^6.6.4",
+        "@testing-library/jest-dom": "^6.7.0",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
         "@types/imagesloaded": "^4.1.7",
-        "@types/jest": "^29.5.14",
-        "@types/node": "^20.19.10",
+        "@types/jest": "^30.0.0",
+        "@types/node": "^20.19.11",
         "@types/react": "^18.3.23",
         "@types/react-dom": "^18.3.7",
+        "axios": "^1.11.0",
         "eslint": "^9.33.0",
-        "eslint-config-next": "15.0.2",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
+        "eslint-config-next": "^15.4.7",
+        "https": "^1.0.0",
+        "imagesloaded": "^5.0.0",
+        "jest": "^30.0.5",
+        "jest-environment-jsdom": "^30.0.5",
+        "motion": "^12.23.12",
+        "pnpm": "^10.14.0",
         "react-emoji-render": "^2.0.1",
+        "stylelint": "^16.23.1",
+        "stylelint-config-standard": "^39.0.0",
+        "stylelint-config-tailwindcss": "^1.0.0",
         "tailwindcss": "3.4.14",
         "typescript": "^5.9.2"
     },
